@@ -31,6 +31,8 @@
 #include <sounds.h>
 #include <sproto.h>
 
+#include "living.h"
+
 static method_ret spellbook_type_apply(ob_methods *context, object *lighter, object *applier, int aflags);
 
 /**
@@ -195,7 +197,7 @@ static method_ret spellbook_type_apply(ob_methods *context, object *book, object
                 "In your confused state you flub the wording of the text!", NULL);
             scroll_failure(applier, 0-random_roll(0, spell->level, applier, PREFER_LOW), MAX(spell->stats.sp, spell->stats.grace));
         } else if (QUERY_FLAG(book, FLAG_STARTEQUIP)
-        || (random_roll(0, 100, applier, PREFER_LOW)-(5*read_level)) < learn_spell[spell->stats.grace ? applier->stats.Wis : applier->stats.Int]) {
+        || (random_roll(0, 100, applier, PREFER_LOW)-(5*read_level)) < get_learn_spell(spell->stats.grace ? applier->stats.Wis : applier->stats.Int)) {
             draw_ext_info(NDI_UNIQUE, 0, applier, MSG_TYPE_APPLY, MSG_TYPE_APPLY_SUCCESS,
                 "You succeed in learning the spell!", NULL);
             do_learn_spell(applier, spell, 0);
