@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Encapsulate access to xxx_bonus[] (and similar) arrays with accessor functions
+get_xxx_bonus().
+---
+common/living.c: Make arrays static. Add accessor functions.
+common/living.h: Remove arrays. Add accessor function prototypes.
+*.c: Replace xxx_bonus[stat] with get_xxx_bonus(stat).
+Andreas Kirschbaum 2009-02-03
+
 common/object.c, common/exp.c, common/time.c, common/recipe.c, common/arch.c,
   common/map.c, common/los.c: Fix some minor issues (variables that should have
   been static, using 0 instead of NULL, leading to more confusing code) found
